cmd/kube-burner/ocp-config/cluster-density/np-allow-from-ingress.yml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-from-openshift-ingress
spec:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          network.openshift.io/policy-group: ingress
  - ports:
    - protocol: TCP
      port: 8443
    - protocol: TCP
      port: 8080
  podSelector: {}
  policyTypes:
  - Ingress
